# agda-search

./: .gitignore  LICENSE  README.md  agda-search.cabal  default.nix  pin.nix  pkgs.nix  shell.nix
.github/workflows/: nix.yaml
agda-search/: agda-search.cabal  default.nix  shell.nix
agda-search-web/: agda-search-web.cabal  default.nix  shell.nix
agda-search-web/app/: Main.hs
agda-search-web/src/AgdaSearch/: Web.hs
agda-search-web/src/AgdaSearch/Web/: File.hs  Home.hs  Layout.hs  Refer.hs  Routes.hs  Settings.hs
agda-search-web/templates/: home.hamlet  layout.hamlet
agda-search/src/AgdaSearch/: Cli.hs  Populate.hs  Query.hs  Schema.hs  Uri.hs
app/: Main.hs  Populate.hs  Schema.hs
nix/: All.agda  ci.nix  create-db.nix  default.nix  pin.nix  pkgs.nix
nix/db/: 1lab.nix  stdlib.nix
src/AgdaSearch/: Cli.hs  Populate.hs  Schema.hs  Server.hs  Uri.hs
templates/: home.hamlet  home.lucius
