cabal-version:      2.4
name:               agda-search
version:            0.1.0.0
author:             Amélia Liao
maintainer:         me@amelia.how

extra-source-files: CHANGELOG.md

executable agda-search
    main-is:          Main.hs
    other-modules:    Schema
                    , Populate
    build-depends:    base            ^>=4.14.3.0
                    , Agda            == 2.6.2
                    , text            == 1.2.*
                    , containers      == 0.6.5.*
                    , vector          == 0.12.*
                    , alfred-margaret ^>= 1.1.0.0
                    , hashable
                    , syb
                    , deepseq
                    , sqlite-simple
    hs-source-dirs:   app
    default-language: Haskell2010
