cabal-version:      2.4
name:               agda-search
version:            0.1.0.0
author:             Amélia Liao
maintainer:         me@amelia.how

extra-source-files: CHANGELOG.md

library
  exposed-modules:    AgdaSearch.Schema
                    , AgdaSearch.Populate
                    , AgdaSearch.Cli
                    , AgdaSearch.Server
                    , AgdaSearch.Query
                    , AgdaSearch.Uri
  ghc-options: -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints -Wincomplete-record-updates -Widentities -Wcpp-undef -fwarn-tabs -Wpartial-fields -fdefer-diagnostics
  default-language: Haskell2010
  build-depends:    base            ^>=4.14.3.0
                    , Agda            == 2.6.2
                    , text            == 1.2.*
                    , containers      == 0.6.5.*
                    , vector          == 0.12.*
                    , alfred-margaret ^>= 1.1.0.0
                    , hashable
                    , syb
                    , deepseq
                    , sqlite-simple
                    , optparse-applicative
                    , yesod
                    , yesod-core
                    , resource-pool
                    , data-default
                    , template-haskell
                    , shakespeare
                    , yesod-form
                    , mtl
  hs-source-dirs:   src

executable agda-search
    main-is:          Main.hs
    build-depends:    base            ^>=4.14.3.0
                    , Agda            == 2.6.2
                    , text            == 1.2.*
                    , containers      == 0.6.5.*
                    , vector          == 0.12.*
                    , alfred-margaret ^>= 1.1.0.0
                    , hashable
                    , syb
                    , deepseq
                    , sqlite-simple
                    , agda-search
    hs-source-dirs:   app
    default-language: Haskell2010
