cabal-version:      2.4
name:               agda-search-web
version:            0.1.0.0
author:             Jappie Klooster
maintainer:         hi@jappie.me

extra-source-files: CHANGELOG.md

library
  exposed-modules: AgdaSearch.Web
                   , AgdaSearch.Web.Settings
                   , AgdaSearch.Web.File
                   , AgdaSearch.Web.Home
                   , AgdaSearch.Web.Layout
                   , AgdaSearch.Web.Routes
                   , AgdaSearch.Web.Refer
  ghc-options: -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints -Wincomplete-record-updates -Widentities -Wcpp-undef -fwarn-tabs -Wpartial-fields -fdefer-diagnostics
  default-language: Haskell2010
  build-depends:    base            ^>=4.14.3.0
                    , agda-search
                    , hashable
                    , syb
                    , deepseq
                    , sqlite-simple
                    , optparse-applicative
                    , yesod
                    , yesod-core
                    , resource-pool
                    , data-default
                    , template-haskell
                    , shakespeare
                    , yesod-form
                    , mtl
                    , text
                    , envparse
                    , lens-regex
                    , regex-base
                    , regex-posix
                    , lens
                    , filepath
                    , blaze-html
  hs-source-dirs:   src

executable agda-search-web
    main-is:          Main.hs
    build-depends:    base            ^>=4.14.3.0
                    , agda-search-web
    hs-source-dirs:   app
    default-language: Haskell2010
